--- a/app/src/main/res/menu/actions.xml
+++ b/app/src/main/res/menu/actions.xml
@@ -5,6 +5,9 @@
     <item android:id="@+id/action_about"
         android:title="@string/about"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_close"
+        android:title="@string/close"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
